// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot parser should parse attr stmt 1`] = `
{
  "attrs": {
    "edge": {
      "color": "purple",
      "fontcolor": "green",
    },
    "graph": {
      "color": "lightgrey",
    },
    "node": {
      "color": "red",
      "fontcolor": "blue",
    },
  },
  "children": [
    {
      "attrs": {
        "graph": {
          "label": "process",
        },
      },
      "children": [],
      "id": "sub",
      "type": "subgraph",
    },
  ],
  "id": "",
  "type": "graph",
}
`;

exports[`dot parser should parse directed edge 1`] = `
{
  "children": [
    {
      "edge_list": [
        {
          "id": "a",
          "type": "node_id",
        },
        {
          "id": "b",
          "type": "node_id",
        },
      ],
      "type": "edge_stmt",
    },
  ],
  "id": "Test",
  "type": "digraph",
}
`;

exports[`dot parser should parse dot comment 1`] = `
{
  "children": [
    {
      "nodeId": {
        "id": "some_node",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
  ],
  "id": "Test",
  "type": "graph",
}
`;

exports[`dot parser should parse edge 1`] = `
{
  "children": [
    {
      "edge_list": [
        {
          "id": "name0",
          "type": "node_id",
        },
        {
          "id": "course",
          "type": "node_id",
        },
      ],
      "type": "edge_stmt",
    },
    {
      "attrs": {
        "label": "n",
        "len": "1.00",
      },
      "edge_list": [
        {
          "id": "course",
          "type": "node_id",
        },
        {
          "id": "C-I",
          "type": "node_id",
        },
      ],
      "type": "edge_stmt",
    },
  ],
  "id": "Test",
  "type": "graph",
}
`;

exports[`dot parser should parse node 1`] = `
{
  "children": [
    {
      "attrs": {
        "shape": "box",
      },
      "nodeId": {
        "id": "name",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
    {
      "nodeId": {
        "id": "course",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
    {
      "nodeId": {
        "id": "student",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
  ],
  "id": "ER",
  "type": "graph",
}
`;

exports[`dot parser should parse node in shorthand 1`] = `
{
  "children": [
    {
      "attrs": {
        "label": "a long long name",
      },
      "nodeId": {
        "id": "name",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
  ],
  "id": "ER",
  "type": "graph",
}
`;

exports[`dot parser should parse subgraph 1`] = `
{
  "children": [
    {
      "children": [
        {
          "nodeId": {
            "id": "n1",
            "type": "node_id",
          },
          "type": "node_stmt",
        },
      ],
      "id": "S1",
      "type": "subgraph",
    },
    {
      "nodeId": {
        "id": "n2",
        "type": "node_id",
      },
      "type": "node_stmt",
    },
    {
      "edge_list": [
        {
          "id": "n1",
          "type": "node_id",
        },
        {
          "id": "n2",
          "type": "node_id",
        },
      ],
      "type": "edge_stmt",
    },
  ],
  "id": "Test",
  "type": "graph",
}
`;
